Version updated to 6.0.1 Vaadin version 15.0.6 Bug fix release. Requires Java 11.